# agentsec

./: .env.example  .gitignore  LICENSE  README.md  agentsec-pricing.yaml  pyproject.toml
.claude/: CLAUDE.md  PHASE1.md  agentsec-spec.md
.github/workflows/: ci.yml  wiki.yml
docs/superpowers/plans/: 2026-04-01-llm-based-detection.md  2026-04-01-real-world-target-harnesses.md  2026-04-01-smart-payload-generator.md  2026-04-02-dashboard-uiux-rework.md  2026-04-02-detection-pipeline-hardening.md  2026-04-02-guardrails-session06.md  2026-04-02-session-05-rag-harnesses.md  2026-04-03-agent-targeting.md  2026-04-03-detection-mode.md  2026-04-03-github-wiki.md  2026-04-03-sarif-readme-release.md
docs/superpowers/specs/: 2026-04-01-llm-based-detection-design.md  2026-04-01-real-world-target-harnesses-design.md  (+10 more)
examples/: ci_integration.yml  scan_langgraph.py  scan_real_world.py
reports/: email_automation.md
scripts/: live_scan.sh
scripts/wiki/: generate_api_reference.py  generate_cli_reference.py  generate_probe_index.py
src/agentsec/: __init__.py
tests/fixtures/: simple_chain.py  supervisor_crew.py  utils.py  vulnerable_rag.py
tests/targets/: _mock_models.py  _openrouter_llm.py  email_automation_harness.py  multi_agentic_rag_harness.py  rag_customer_support_harness.py  rag_research_harness.py  supervisor_harness.py  swarm_harness.py
tests/test_adapters/: test_langgraph.py
tests/test_cli/: test_main.py  test_negative.py
tests/test_core/: test_config.py  test_exceptions.py  test_finding.py  test_finding_override.py  test_pricing.py  test_probe_base.py  test_scanner.py
tests/test_dashboard/: test_api.py  test_store.py
tests/test_guardrails/: test_circuit_breaker.py  test_credential_isolator.py  test_execution_limiter.py  test_input_boundary.py  test_integration.py
tests/test_llm/: test_detection.py  test_openrouter.py  test_payloads.py  test_provider.py
tests/test_probes/: test_asi01.py  test_asi02.py  test_asi03.py  test_asi04.py  test_asi05.py  test_asi06.py  test_asi07.py  test_asi08.py  test_asi09.py  test_asi10.py  test_registry.py
tests/test_reporters/: test_json_report.py  test_markdown.py  test_sarif.py
tests/test_targets/: test_harnesses.py
wiki/: API-Finding.md  API-Guardrails.md  API-LLMProvider.md  Adapter-Authoring.md  CI-Integration.md  CLI-Commands.md  Contributing.md  Dashboard-Internals.md  Detection-Pipeline.md  Home.md  Probe-Index.md  Probe-Selector.md  Real-World-Targets.md  Testing-Guide.md  Web-Dashboard.md  _Sidebar.md
wiki/developing/: Architecture.md  LLM-Integration.md  Probe-Authoring.md
wiki/reference/: API-BaseAdapter.md  API-BaseProbe.md  API-Finding.md  API-Guardrails.md  API-Reporters.md  API-ScanConfig.md  CLI-Commands.md  OWASP-Categories.md  Probe-Index.md
wiki/using/: CLI-Reference.md  Guardrails.md  Installation.md  Output-Formats.md  Probe-Selector.md  Quick-Start.md  Scan-Modes.md
(+86 files in other folders)
