authors = [{name = "Taras Ivaniv"}]
readme = "README.md"

[project.urls]
Homepage = "https://github.com/n3pt7un/agentsec"
Issues = "https://github.com/n3pt7un/agentsec/issues"

[project]
name = "agentsec"
version = "0.1.0"
description = "Red-team and harden multi-agent LLM systems"
requires-python = ">=3.12"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
langgraph = ["langgraph>=0.2", "langchain-core>=0.3"]
smart = ["openai>=1.0"]
targets = [
    "langgraph-supervisor>=0.0.1",
    "langgraph-swarm>=0.0.1",
    "langchain-openai>=0.3",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[project.scripts]
agentsec = "agentsec.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentsec"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "ASYNC"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
